modified:   choi_bau_cua.html 	modified:   css/cssblog.css 	new file:   css/game.css 	new file:   game_bau_cua.html 	new file:   images/bau.jpeg 	new file:   images/ca.jpeg 	new file:   images/coin.png 	new file:   images/cua.jpeg 	new file:   images/ga.jpeg 	new file:   images/nai.jpeg 	new file:   images/tom.jpeg 	new file:   js/script-game.js

--- a/choi_bau_cua.html
+++ b/choi_bau_cua.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vn">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,6 +39,10 @@
                     <!-- <p class="caption" data-translate=""></p> -->
                   </div>
             </div>
+            <div class="buttons">
+              <button class="btn" onclick="window.location.href='game_bau_cua.html';"><span></span><p data-start="good luck!" data-text="Bắt đầu!" data-title="Chơi"></p></button>
+           </div>
+            
             <p class="start-topic" data-translate="">Trong những ngày Tết, bên cạnh tiếng cười đùa rộn ràng và không khí đoàn viên, các trò chơi dân gian như bầu cua thường trở thành điểm nhấn thu hút sự quan tâm của nhiều người. Đây là một trò chơi đơn giản, đòi hỏi ít dụng cụ, mang tính giải trí cao, đặc biệt khi quây quần cùng gia đình, bạn bè. Tuy nhiên, nếu đi kèm việc đặt cược bằng tiền hoặc hiện vật, trò chơi này không chỉ làm tăng tính may rủi mà còn tiềm ẩn những hệ quả mà người chơi đôi khi không để ý, từ việc dễ thua hơn thắng cho đến nguy cơ vướng vào các quy định pháp luật.</p>
             <h2
               id="section1"
@@ -139,7 +143,8 @@
           class="section"
           data-transtate=""> Lời kết</h2>
           <p>Ngày Tết là dịp để sum vầy, tận hưởng niềm vui và xây dựng những kỷ niệm ý nghĩa bên gia đình. Thay vì tham gia các trò chơi có yếu tố may rủi và đặt cược, hãy lựa chọn những hoạt động lành mạnh như cùng chơi cờ vua, cờ tướng hoặc tổ chức các trò chơi dân gian không liên quan đến tiền bạc. Chúc bạn và gia đình một mùa Tết an khang, hạnh phúc, và tránh xa những rủi ro không đáng có!</p>
-      </div>
+          <div><a href="game_bau_cua.html">Chơi game ở đây</a></div>
+        </div>
           <div class="catalog">
             <p
               style="font-size: 20px; font-weight: bold; margin: 0"
