deleted:    data/audio/Am_thanh_tieng_lac_xuc_xac-www_tiengdong_com.mp3

--- a/game_bau_cua.html
+++ b/game_bau_cua.html
@@ -78,6 +78,8 @@
       </div>
     <button id="roll-btn">Tung Xúc Xắc</button>
     <button id="reset-bet" onclick="resetBet()">Reset Cược</button>
+    <audio id="backgroundMusic" src="" preload="auto"></audio>
+    <audio id="rollDiceSound" src="./data/audio/Am_thanh_tieng_lac_xuc_xac-www_tiengdong_com.mp3">rẻw</audio>
   </div>
   <script src="js/script-game.js"></script>
 </body>
