--- a/test.html
+++ b/test.html
@@ -53,5 +53,7 @@
       <div class="formula">\( P(\text{trúng}) = 1 - P(\text{không trúng}) = 1 - \frac{125}{216} = \frac{91}{216} \approx 42.13\% \)</div>
     </li>
   </ul>
+  <audio id="rollDiceSound" src="roll-dice-sound.mp3"></audio>
+
 </body>
 </html>
