--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                                 <polygon points="50,0 61,39 100,50 61,61 50,100 39,61 0,50 39,39" />
                                           </svg>
                                     </div>
-                                    <p data-translate="intern"></p>
+                                    <!-- <p data-translate="intern"></p> -->
                               </div>
                               <div class="hello-info-avatar">
                                     <div class="ellipse"></div>
